IEEE fraud data upload

--- a/2.classification/2-9.NN.ipynb
+++ b/2.classification/2-9.NN.ipynb
@@ -204,63 +204,61 @@
      "text": [
       "Train on 348 samples, validate on 150 samples\n",
       "Epoch 1/100\n",
-      "348/348 [==============================] - 1s 2ms/step - loss: 0.5942 - acc: 0.6897 - val_loss: 0.5091 - val_acc: 0.7667\n",
+      "348/348 [==============================] - 1s 3ms/step - loss: 0.5422 - acc: 0.7471 - val_loss: 0.4445 - val_acc: 0.8000\n",
       "Epoch 2/100\n",
-      "348/348 [==============================] - ETA: 0s - loss: 0.4096 - acc: 0.843 - 0s 186us/step - loss: 0.4567 - acc: 0.7989 - val_loss: 0.4551 - val_acc: 0.8067\n",
+      "348/348 [==============================] - 0s 192us/step - loss: 0.4413 - acc: 0.8075 - val_loss: 0.4385 - val_acc: 0.8200\n",
       "Epoch 3/100\n",
-      "348/348 [==============================] - 0s 166us/step - loss: 0.4188 - acc: 0.8247 - val_loss: 0.4422 - val_acc: 0.8000\n",
+      "348/348 [==============================] - 0s 206us/step - loss: 0.4158 - acc: 0.8276 - val_loss: 0.4422 - val_acc: 0.8000\n",
       "Epoch 4/100\n",
-      "348/348 [==============================] - 0s 209us/step - loss: 0.4002 - acc: 0.8333 - val_loss: 0.4489 - val_acc: 0.8000\n",
+      "348/348 [==============================] - 0s 195us/step - loss: 0.3967 - acc: 0.8362 - val_loss: 0.4173 - val_acc: 0.8067\n",
       "Epoch 5/100\n",
-      "348/348 [==============================] - 0s 195us/step - loss: 0.3837 - acc: 0.8563 - val_loss: 0.4168 - val_acc: 0.8067\n",
+      "348/348 [==============================] - 0s 198us/step - loss: 0.3912 - acc: 0.8420 - val_loss: 0.4347 - val_acc: 0.7933\n",
       "Epoch 6/100\n",
-      "348/348 [==============================] - 0s 198us/step - loss: 0.3818 - acc: 0.8362 - val_loss: 0.4258 - val_acc: 0.8200\n",
+      "348/348 [==============================] - 0s 212us/step - loss: 0.3896 - acc: 0.8477 - val_loss: 0.4261 - val_acc: 0.8133\n",
       "Epoch 7/100\n",
-      "348/348 [==============================] - 0s 201us/step - loss: 0.3674 - acc: 0.8362 - val_loss: 0.4431 - val_acc: 0.8133\n",
+      "348/348 [==============================] - 0s 192us/step - loss: 0.3829 - acc: 0.8534 - val_loss: 0.4327 - val_acc: 0.8000\n",
       "Epoch 8/100\n",
-      "348/348 [==============================] - 0s 186us/step - loss: 0.3610 - acc: 0.8477 - val_loss: 0.4370 - val_acc: 0.8200\n",
+      "348/348 [==============================] - 0s 229us/step - loss: 0.3748 - acc: 0.8534 - val_loss: 0.4257 - val_acc: 0.8067\n",
       "Epoch 9/100\n",
-      "348/348 [==============================] - 0s 186us/step - loss: 0.3531 - acc: 0.8506 - val_loss: 0.4517 - val_acc: 0.8267\n",
+      "348/348 [==============================] - 0s 192us/step - loss: 0.3638 - acc: 0.8649 - val_loss: 0.4385 - val_acc: 0.8000\n",
       "Epoch 10/100\n",
-      "348/348 [==============================] - 0s 198us/step - loss: 0.3485 - acc: 0.8534 - val_loss: 0.4438 - val_acc: 0.8267\n",
+      "348/348 [==============================] - 0s 126us/step - loss: 0.3574 - acc: 0.8534 - val_loss: 0.4313 - val_acc: 0.8133\n",
       "Epoch 11/100\n",
-      "348/348 [==============================] - 0s 163us/step - loss: 0.3423 - acc: 0.8563 - val_loss: 0.4816 - val_acc: 0.7933\n",
+      "348/348 [==============================] - 0s 192us/step - loss: 0.3491 - acc: 0.8563 - val_loss: 0.4496 - val_acc: 0.7933\n",
       "Epoch 12/100\n",
-      "348/348 [==============================] - 0s 203us/step - loss: 0.3343 - acc: 0.8563 - val_loss: 0.4440 - val_acc: 0.8133\n",
+      "348/348 [==============================] - 0s 206us/step - loss: 0.3617 - acc: 0.8563 - val_loss: 0.4376 - val_acc: 0.8133\n",
       "Epoch 13/100\n",
-      "348/348 [==============================] - 0s 206us/step - loss: 0.3374 - acc: 0.8563 - val_loss: 0.5037 - val_acc: 0.7867\n",
+      "348/348 [==============================] - 0s 209us/step - loss: 0.3395 - acc: 0.8621 - val_loss: 0.4755 - val_acc: 0.7867\n",
       "Epoch 14/100\n",
-      "348/348 [==============================] - 0s 186us/step - loss: 0.3202 - acc: 0.8649 - val_loss: 0.4447 - val_acc: 0.8200\n",
+      "348/348 [==============================] - 0s 192us/step - loss: 0.3378 - acc: 0.8736 - val_loss: 0.4479 - val_acc: 0.8133\n",
       "Epoch 15/100\n",
-      "348/348 [==============================] - 0s 241us/step - loss: 0.3172 - acc: 0.8563 - val_loss: 0.5041 - val_acc: 0.8000\n",
+      "348/348 [==============================] - 0s 189us/step - loss: 0.3302 - acc: 0.8678 - val_loss: 0.4408 - val_acc: 0.8200\n",
       "Epoch 16/100\n",
-      "348/348 [==============================] - 0s 181us/step - loss: 0.3149 - acc: 0.8707 - val_loss: 0.4697 - val_acc: 0.7933\n",
+      "348/348 [==============================] - 0s 201us/step - loss: 0.3142 - acc: 0.8649 - val_loss: 0.4646 - val_acc: 0.7800\n",
       "Epoch 17/100\n",
-      "348/348 [==============================] - 0s 201us/step - loss: 0.2985 - acc: 0.8707 - val_loss: 0.5174 - val_acc: 0.7867\n",
+      "348/348 [==============================] - 0s 209us/step - loss: 0.3136 - acc: 0.8707 - val_loss: 0.4858 - val_acc: 0.7667\n",
       "Epoch 18/100\n",
-      "348/348 [==============================] - 0s 224us/step - loss: 0.2956 - acc: 0.8822 - val_loss: 0.4687 - val_acc: 0.8067\n",
+      "348/348 [==============================] - 0s 218us/step - loss: 0.3057 - acc: 0.8707 - val_loss: 0.4639 - val_acc: 0.8000\n",
       "Epoch 19/100\n",
-      "348/348 [==============================] - 0s 238us/step - loss: 0.2949 - acc: 0.8764 - val_loss: 0.4996 - val_acc: 0.7867\n",
+      "348/348 [==============================] - 0s 198us/step - loss: 0.3130 - acc: 0.8707 - val_loss: 0.4815 - val_acc: 0.8000\n",
       "Epoch 20/100\n",
-      "348/348 [==============================] - 0s 198us/step - loss: 0.2961 - acc: 0.8678 - val_loss: 0.5194 - val_acc: 0.7867\n",
+      "348/348 [==============================] - 0s 195us/step - loss: 0.3092 - acc: 0.8793 - val_loss: 0.4885 - val_acc: 0.7933\n",
       "Epoch 21/100\n",
-      "348/348 [==============================] - 0s 189us/step - loss: 0.2969 - acc: 0.8764 - val_loss: 0.4946 - val_acc: 0.7667\n",
+      "348/348 [==============================] - 0s 201us/step - loss: 0.2936 - acc: 0.8764 - val_loss: 0.4905 - val_acc: 0.7867\n",
       "Epoch 22/100\n",
-      "348/348 [==============================] - 0s 172us/step - loss: 0.2860 - acc: 0.8764 - val_loss: 0.5290 - val_acc: 0.7867\n",
+      "348/348 [==============================] - 0s 198us/step - loss: 0.2984 - acc: 0.8736 - val_loss: 0.4841 - val_acc: 0.7800\n",
       "Epoch 23/100\n",
-      "348/348 [==============================] - 0s 201us/step - loss: 0.2826 - acc: 0.8764 - val_loss: 0.5411 - val_acc: 0.7667\n",
+      "348/348 [==============================] - 0s 183us/step - loss: 0.2869 - acc: 0.8793 - val_loss: 0.4989 - val_acc: 0.8067\n",
       "Epoch 24/100\n",
-      "348/348 [==============================] - 0s 198us/step - loss: 0.2951 - acc: 0.8851 - val_loss: 0.5219 - val_acc: 0.7800\n",
-      "Epoch 25/100\n",
-      "348/348 [==============================] - 0s 195us/step - loss: 0.2820 - acc: 0.8822 - val_loss: 0.5420 - val_acc: 0.7733\n",
+      "348/348 [==============================] - 0s 205us/step - loss: 0.2924 - acc: 0.8793 - val_loss: 0.4999 - val_acc: 0.7933\n",
       "Restoring model weights from the end of the best epoch\n",
-      "Epoch 00025: early stopping\n"
+      "Epoch 00024: early stopping\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.callbacks.History at 0x20421666448>"
+       "<keras.callbacks.callbacks.History at 0x166e44fa4c8>"
       ]
      },
      "execution_count": 8,
@@ -285,7 +283,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.794392523364486\n"
+      "0.8037383177570093\n"
      ]
     }
    ],
@@ -310,13 +308,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "214/214 [==============================] - 0s 98us/step\n"
+      "214/214 [==============================] - 0s 93us/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.47600608423491503, 0.7943925261497498]"
+       "[0.45257473743964577, 0.8037382960319519]"
       ]
      },
      "execution_count": 10,
@@ -341,57 +339,63 @@
      "text": [
       "Train on 348 samples, validate on 150 samples\n",
       "Epoch 1/40\n",
-      "348/348 [==============================] - 0s 507us/step - loss: 0.5309 - acc: 0.7529 - val_loss: 0.4841 - val_acc: 0.7600\n",
+      "348/348 [==============================] - 0s 467us/step - loss: 0.6075 - acc: 0.7414 - val_loss: 0.4831 - val_acc: 0.8000\n",
       "Epoch 2/40\n",
-      "348/348 [==============================] - 0s 203us/step - loss: 0.4511 - acc: 0.7845 - val_loss: 0.4655 - val_acc: 0.7867\n",
+      "348/348 [==============================] - 0s 175us/step - loss: 0.4577 - acc: 0.8075 - val_loss: 0.5245 - val_acc: 0.7533\n",
       "Epoch 3/40\n",
-      "348/348 [==============================] - 0s 172us/step - loss: 0.4117 - acc: 0.8161 - val_loss: 0.4952 - val_acc: 0.8000\n",
+      "348/348 [==============================] - 0s 192us/step - loss: 0.4313 - acc: 0.8420 - val_loss: 0.4422 - val_acc: 0.8067\n",
       "Epoch 4/40\n",
-      "348/348 [==============================] - 0s 178us/step - loss: 0.4155 - acc: 0.8305 - val_loss: 0.5059 - val_acc: 0.8200\n",
+      "348/348 [==============================] - 0s 192us/step - loss: 0.4383 - acc: 0.8276 - val_loss: 0.4490 - val_acc: 0.8067\n",
       "Epoch 5/40\n",
-      "348/348 [==============================] - 0s 186us/step - loss: 0.3922 - acc: 0.8132 - val_loss: 0.4778 - val_acc: 0.7800\n",
+      "348/348 [==============================] - 0s 186us/step - loss: 0.4115 - acc: 0.8218 - val_loss: 0.4309 - val_acc: 0.8067\n",
       "Epoch 6/40\n",
-      "348/348 [==============================] - 0s 189us/step - loss: 0.4070 - acc: 0.8420 - val_loss: 0.5031 - val_acc: 0.8000\n",
+      "348/348 [==============================] - 0s 215us/step - loss: 0.3990 - acc: 0.8276 - val_loss: 0.4419 - val_acc: 0.8067\n",
       "Epoch 7/40\n",
-      "348/348 [==============================] - 0s 199us/step - loss: 0.3990 - acc: 0.8305 - val_loss: 0.5799 - val_acc: 0.7533\n",
+      "348/348 [==============================] - 0s 201us/step - loss: 0.3717 - acc: 0.8247 - val_loss: 0.5249 - val_acc: 0.7600\n",
       "Epoch 8/40\n",
-      "348/348 [==============================] - 0s 198us/step - loss: 0.3754 - acc: 0.8420 - val_loss: 0.4927 - val_acc: 0.8400\n",
+      "348/348 [==============================] - 0s 189us/step - loss: 0.3823 - acc: 0.8448 - val_loss: 0.5175 - val_acc: 0.7733\n",
       "Epoch 9/40\n",
-      "348/348 [==============================] - 0s 202us/step - loss: 0.3563 - acc: 0.8305 - val_loss: 0.5054 - val_acc: 0.8467\n",
+      "348/348 [==============================] - 0s 218us/step - loss: 0.3889 - acc: 0.8333 - val_loss: 0.4673 - val_acc: 0.8133\n",
       "Epoch 10/40\n",
-      "348/348 [==============================] - 0s 189us/step - loss: 0.3524 - acc: 0.8190 - val_loss: 0.5080 - val_acc: 0.8333\n",
+      "348/348 [==============================] - 0s 195us/step - loss: 0.3632 - acc: 0.8448 - val_loss: 0.5192 - val_acc: 0.7800\n",
       "Epoch 11/40\n",
-      "348/348 [==============================] - 0s 183us/step - loss: 0.3351 - acc: 0.8621 - val_loss: 0.5672 - val_acc: 0.8000\n",
+      "348/348 [==============================] - 0s 189us/step - loss: 0.3565 - acc: 0.8391 - val_loss: 0.5387 - val_acc: 0.7800\n",
       "Epoch 12/40\n",
-      "348/348 [==============================] - 0s 215us/step - loss: 0.3652 - acc: 0.8420 - val_loss: 0.5345 - val_acc: 0.7533\n",
+      "348/348 [==============================] - 0s 146us/step - loss: 0.3430 - acc: 0.8362 - val_loss: 0.6075 - val_acc: 0.7267\n",
       "Epoch 13/40\n",
-      "348/348 [==============================] - 0s 152us/step - loss: 0.3843 - acc: 0.8305 - val_loss: 0.5174 - val_acc: 0.7600\n",
+      "348/348 [==============================] - 0s 181us/step - loss: 0.3434 - acc: 0.8506 - val_loss: 0.5597 - val_acc: 0.7467\n",
       "Epoch 14/40\n",
-      "348/348 [==============================] - 0s 198us/step - loss: 0.3924 - acc: 0.8362 - val_loss: 0.4769 - val_acc: 0.7933\n",
+      "348/348 [==============================] - 0s 181us/step - loss: 0.4078 - acc: 0.8017 - val_loss: 0.5098 - val_acc: 0.7800\n",
       "Epoch 15/40\n",
-      "348/348 [==============================] - 0s 165us/step - loss: 0.3220 - acc: 0.8707 - val_loss: 0.5591 - val_acc: 0.7800\n",
+      "348/348 [==============================] - 0s 195us/step - loss: 0.3824 - acc: 0.8276 - val_loss: 0.5126 - val_acc: 0.8333\n",
       "Epoch 16/40\n",
-      "348/348 [==============================] - 0s 183us/step - loss: 0.3245 - acc: 0.8649 - val_loss: 0.5489 - val_acc: 0.7933\n",
+      "348/348 [==============================] - 0s 212us/step - loss: 0.3620 - acc: 0.8247 - val_loss: 0.5398 - val_acc: 0.7933\n",
       "Epoch 17/40\n",
-      "348/348 [==============================] - 0s 195us/step - loss: 0.3186 - acc: 0.8736 - val_loss: 0.5268 - val_acc: 0.7933\n",
+      "348/348 [==============================] - 0s 201us/step - loss: 0.3275 - acc: 0.8420 - val_loss: 0.5496 - val_acc: 0.7667\n",
       "Epoch 18/40\n",
-      "348/348 [==============================] - 0s 212us/step - loss: 0.3256 - acc: 0.8534 - val_loss: 0.7406 - val_acc: 0.5933\n",
+      "348/348 [==============================] - 0s 235us/step - loss: 0.3345 - acc: 0.8563 - val_loss: 0.5632 - val_acc: 0.7867\n",
       "Epoch 19/40\n",
-      "348/348 [==============================] - 0s 209us/step - loss: 0.3454 - acc: 0.8132 - val_loss: 0.6152 - val_acc: 0.8333\n",
+      "348/348 [==============================] - 0s 169us/step - loss: 0.3396 - acc: 0.8621 - val_loss: 0.7069 - val_acc: 0.7267\n",
       "Epoch 20/40\n",
-      "348/348 [==============================] - 0s 123us/step - loss: 0.3722 - acc: 0.8333 - val_loss: 0.5372 - val_acc: 0.8467\n",
+      "348/348 [==============================] - 0s 172us/step - loss: 0.3373 - acc: 0.8362 - val_loss: 0.6077 - val_acc: 0.7467\n",
       "Epoch 21/40\n",
-      "348/348 [==============================] - 0s 203us/step - loss: 0.3630 - acc: 0.8333 - val_loss: 0.5750 - val_acc: 0.8400\n",
+      "348/348 [==============================] - 0s 192us/step - loss: 0.3458 - acc: 0.8362 - val_loss: 0.5665 - val_acc: 0.7267\n",
       "Epoch 22/40\n",
-      "348/348 [==============================] - 0s 201us/step - loss: 0.3184 - acc: 0.8448 - val_loss: 0.6053 - val_acc: 0.8400\n",
+      "348/348 [==============================] - 0s 198us/step - loss: 0.3354 - acc: 0.8448 - val_loss: 0.6169 - val_acc: 0.7867\n",
+      "Epoch 23/40\n",
+      "348/348 [==============================] - 0s 226us/step - loss: 0.3172 - acc: 0.8448 - val_loss: 0.6339 - val_acc: 0.7667\n",
+      "Epoch 24/40\n",
+      "348/348 [==============================] - 0s 224us/step - loss: 0.3310 - acc: 0.8563 - val_loss: 0.5845 - val_acc: 0.8133\n",
+      "Epoch 25/40\n",
+      "348/348 [==============================] - 0s 155us/step - loss: 0.3357 - acc: 0.8477 - val_loss: 0.7418 - val_acc: 0.7333\n",
       "Restoring model weights from the end of the best epoch\n",
-      "Epoch 00022: early stopping\n"
+      "Epoch 00025: early stopping\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.callbacks.History at 0x205944cfe08>"
+       "<keras.callbacks.callbacks.History at 0x16816b22c88>"
       ]
      },
      "execution_count": 11,
