--- a/2.classification/titanic.ipynb
+++ b/2.classification/titanic.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "## 기본 library\n",
     "import numpy as np\n",
@@ -19,7 +27,7 @@
     "from lightgbm import LGBMClassifier\n",
     "from keras import models, layers\n",
     "## helper library\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, KFold, cross_val_score\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "\n",
@@ -65,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +116,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7992653061224491\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 조금 더 간단히 할 수 있음\n",
+    "lr  = LogisticRegression(random_state=0)\n",
+    "acc = cross_val_score(lr, train_X, train_y, cv=kfold, n_jobs=1, scoring='accuracy')\n",
+    "print(np.mean(acc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,8 +286,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -267,38 +297,38 @@
      "text": [
       "|   iter    |  target   | colsam... | max_depth | reg_alpha | reg_lamda | subsample |\n",
       "-------------------------------------------------------------------------------------\n",
-      "| \u001b[0m 1       \u001b[0m | \u001b[0m 0.8536  \u001b[0m | \u001b[0m 0.6842  \u001b[0m | \u001b[0m 9.437   \u001b[0m | \u001b[0m 1.848   \u001b[0m | \u001b[0m 1.68    \u001b[0m | \u001b[0m 0.5966  \u001b[0m |\n",
-      "| \u001b[0m 2       \u001b[0m | \u001b[0m 0.8475  \u001b[0m | \u001b[0m 0.7521  \u001b[0m | \u001b[0m 6.938   \u001b[0m | \u001b[0m 2.686   \u001b[0m | \u001b[0m 2.895   \u001b[0m | \u001b[0m 0.5684  \u001b[0m |\n",
-      "| \u001b[0m 3       \u001b[0m | \u001b[0m 0.8535  \u001b[0m | \u001b[0m 0.8542  \u001b[0m | \u001b[0m 7.76    \u001b[0m | \u001b[0m 1.747   \u001b[0m | \u001b[0m 2.784   \u001b[0m | \u001b[0m 0.3497  \u001b[0m |\n",
-      "| \u001b[0m 4       \u001b[0m | \u001b[0m 0.8474  \u001b[0m | \u001b[0m 0.361   \u001b[0m | \u001b[0m 3.182   \u001b[0m | \u001b[0m 2.515   \u001b[0m | \u001b[0m 2.357   \u001b[0m | \u001b[0m 0.909   \u001b[0m |\n",
-      "| \u001b[95m 5       \u001b[0m | \u001b[95m 0.8556  \u001b[0m | \u001b[95m 0.985   \u001b[0m | \u001b[95m 10.19   \u001b[0m | \u001b[95m 1.438   \u001b[0m | \u001b[95m 2.364   \u001b[0m | \u001b[95m 0.3828  \u001b[0m |\n",
-      "| \u001b[0m 6       \u001b[0m | \u001b[0m 0.8496  \u001b[0m | \u001b[0m 0.7479  \u001b[0m | \u001b[0m 4.29    \u001b[0m | \u001b[0m 2.84    \u001b[0m | \u001b[0m 1.613   \u001b[0m | \u001b[0m 0.5903  \u001b[0m |\n",
-      "| \u001b[0m 7       \u001b[0m | \u001b[0m 0.8475  \u001b[0m | \u001b[0m 0.4852  \u001b[0m | \u001b[0m 9.968   \u001b[0m | \u001b[0m 1.423   \u001b[0m | \u001b[0m 1.748   \u001b[0m | \u001b[0m 0.3132  \u001b[0m |\n",
-      "| \u001b[0m 8       \u001b[0m | \u001b[0m 0.8375  \u001b[0m | \u001b[0m 0.7323  \u001b[0m | \u001b[0m 8.509   \u001b[0m | \u001b[0m 1.889   \u001b[0m | \u001b[0m 2.837   \u001b[0m | \u001b[0m 0.7773  \u001b[0m |\n",
-      "| \u001b[0m 9       \u001b[0m | \u001b[0m 0.8374  \u001b[0m | \u001b[0m 0.5517  \u001b[0m | \u001b[0m 6.933   \u001b[0m | \u001b[0m 2.123   \u001b[0m | \u001b[0m 0.2747  \u001b[0m | \u001b[0m 0.7667  \u001b[0m |\n",
-      "| \u001b[0m 10      \u001b[0m | \u001b[0m 0.8455  \u001b[0m | \u001b[0m 0.7694  \u001b[0m | \u001b[0m 4.893   \u001b[0m | \u001b[0m 0.4739  \u001b[0m | \u001b[0m 1.015   \u001b[0m | \u001b[0m 0.5546  \u001b[0m |\n",
-      "| \u001b[0m 11      \u001b[0m | \u001b[0m 0.8556  \u001b[0m | \u001b[0m 1.0     \u001b[0m | \u001b[0m 12.0    \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.3     \u001b[0m |\n",
-      "| \u001b[0m 12      \u001b[0m | \u001b[0m 0.8275  \u001b[0m | \u001b[0m 1.0     \u001b[0m | \u001b[0m 12.0    \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 1.0     \u001b[0m |\n",
-      "| \u001b[95m 13      \u001b[0m | \u001b[95m 0.8655  \u001b[0m | \u001b[95m 1.0     \u001b[0m | \u001b[95m 3.0     \u001b[0m | \u001b[95m 0.1     \u001b[0m | \u001b[95m 3.0     \u001b[0m | \u001b[95m 0.3     \u001b[0m |\n",
-      "| \u001b[0m 14      \u001b[0m | \u001b[0m 0.8494  \u001b[0m | \u001b[0m 0.9735  \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 0.3     \u001b[0m |\n",
-      "| \u001b[0m 15      \u001b[0m | \u001b[0m 0.8655  \u001b[0m | \u001b[0m 1.0     \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.3     \u001b[0m |\n",
-      "| \u001b[0m 16      \u001b[0m | \u001b[0m 0.8555  \u001b[0m | \u001b[0m 0.3256  \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 1.05    \u001b[0m | \u001b[0m 1.845   \u001b[0m | \u001b[0m 0.3     \u001b[0m |\n",
-      "| \u001b[0m 17      \u001b[0m | \u001b[0m 0.8435  \u001b[0m | \u001b[0m 0.9961  \u001b[0m | \u001b[0m 9.24    \u001b[0m | \u001b[0m 2.836   \u001b[0m | \u001b[0m 0.4483  \u001b[0m | \u001b[0m 0.324   \u001b[0m |\n",
-      "| \u001b[0m 18      \u001b[0m | \u001b[0m 0.8536  \u001b[0m | \u001b[0m 1.0     \u001b[0m | \u001b[0m 12.0    \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 0.3951  \u001b[0m |\n",
-      "| \u001b[0m 19      \u001b[0m | \u001b[0m 0.8515  \u001b[0m | \u001b[0m 1.0     \u001b[0m | \u001b[0m 3.032   \u001b[0m | \u001b[0m 1.918   \u001b[0m | \u001b[0m 0.1726  \u001b[0m | \u001b[0m 1.0     \u001b[0m |\n",
-      "| \u001b[0m 20      \u001b[0m | \u001b[0m 0.8616  \u001b[0m | \u001b[0m 0.9355  \u001b[0m | \u001b[0m 11.99   \u001b[0m | \u001b[0m 1.853   \u001b[0m | \u001b[0m 1.401   \u001b[0m | \u001b[0m 0.3407  \u001b[0m |\n",
-      "| \u001b[0m 21      \u001b[0m | \u001b[0m 0.8375  \u001b[0m | \u001b[0m 1.0     \u001b[0m | \u001b[0m 12.0    \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 1.559   \u001b[0m | \u001b[0m 1.0     \u001b[0m |\n",
-      "| \u001b[0m 22      \u001b[0m | \u001b[0m 0.8516  \u001b[0m | \u001b[0m 0.9384  \u001b[0m | \u001b[0m 3.041   \u001b[0m | \u001b[0m 0.1242  \u001b[0m | \u001b[0m 1.718   \u001b[0m | \u001b[0m 0.9222  \u001b[0m |\n",
-      "| \u001b[0m 23      \u001b[0m | \u001b[0m 0.8635  \u001b[0m | \u001b[0m 0.9879  \u001b[0m | \u001b[0m 9.175   \u001b[0m | \u001b[0m 0.4119  \u001b[0m | \u001b[0m 0.2696  \u001b[0m | \u001b[0m 0.3168  \u001b[0m |\n",
-      "| \u001b[0m 24      \u001b[0m | \u001b[0m 0.8113  \u001b[0m | \u001b[0m 0.3     \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.3009  \u001b[0m |\n",
-      "| \u001b[0m 25      \u001b[0m | \u001b[0m 0.8496  \u001b[0m | \u001b[0m 0.9972  \u001b[0m | \u001b[0m 3.95    \u001b[0m | \u001b[0m 1.551   \u001b[0m | \u001b[0m 2.942   \u001b[0m | \u001b[0m 0.3417  \u001b[0m |\n",
-      "| \u001b[0m 26      \u001b[0m | \u001b[0m 0.8616  \u001b[0m | \u001b[0m 1.0     \u001b[0m | \u001b[0m 8.079   \u001b[0m | \u001b[0m 1.748   \u001b[0m | \u001b[0m 1.361   \u001b[0m | \u001b[0m 0.3     \u001b[0m |\n",
-      "| \u001b[0m 27      \u001b[0m | \u001b[0m 0.8576  \u001b[0m | \u001b[0m 0.3     \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 1.0     \u001b[0m |\n",
-      "| \u001b[0m 28      \u001b[0m | \u001b[0m 0.8514  \u001b[0m | \u001b[0m 0.3     \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 0.3     \u001b[0m |\n",
-      "| \u001b[0m 29      \u001b[0m | \u001b[0m 0.8595  \u001b[0m | \u001b[0m 0.9432  \u001b[0m | \u001b[0m 11.23   \u001b[0m | \u001b[0m 1.581   \u001b[0m | \u001b[0m 0.1034  \u001b[0m | \u001b[0m 0.3036  \u001b[0m |\n",
-      "| \u001b[0m 30      \u001b[0m | \u001b[0m 0.8536  \u001b[0m | \u001b[0m 0.9276  \u001b[0m | \u001b[0m 9.895   \u001b[0m | \u001b[0m 2.999   \u001b[0m | \u001b[0m 2.735   \u001b[0m | \u001b[0m 0.3221  \u001b[0m |\n",
+      "| \u001b[0m 1       \u001b[0m | \u001b[0m 0.8475  \u001b[0m | \u001b[0m 0.6842  \u001b[0m | \u001b[0m 9.437   \u001b[0m | \u001b[0m 1.848   \u001b[0m | \u001b[0m 1.68    \u001b[0m | \u001b[0m 0.5966  \u001b[0m |\n",
+      "| \u001b[95m 2       \u001b[0m | \u001b[95m 0.8536  \u001b[0m | \u001b[95m 0.7521  \u001b[0m | \u001b[95m 6.938   \u001b[0m | \u001b[95m 2.686   \u001b[0m | \u001b[95m 2.895   \u001b[0m | \u001b[95m 0.5684  \u001b[0m |\n",
+      "| \u001b[0m 3       \u001b[0m | \u001b[0m 0.8475  \u001b[0m | \u001b[0m 0.8542  \u001b[0m | \u001b[0m 7.76    \u001b[0m | \u001b[0m 1.747   \u001b[0m | \u001b[0m 2.784   \u001b[0m | \u001b[0m 0.3497  \u001b[0m |\n",
+      "| \u001b[0m 4       \u001b[0m | \u001b[0m 0.8454  \u001b[0m | \u001b[0m 0.361   \u001b[0m | \u001b[0m 3.182   \u001b[0m | \u001b[0m 2.515   \u001b[0m | \u001b[0m 2.357   \u001b[0m | \u001b[0m 0.909   \u001b[0m |\n",
+      "| \u001b[95m 5       \u001b[0m | \u001b[95m 0.8555  \u001b[0m | \u001b[95m 0.985   \u001b[0m | \u001b[95m 10.19   \u001b[0m | \u001b[95m 1.438   \u001b[0m | \u001b[95m 2.364   \u001b[0m | \u001b[95m 0.3828  \u001b[0m |\n",
+      "| \u001b[0m 6       \u001b[0m | \u001b[0m 0.8475  \u001b[0m | \u001b[0m 0.7479  \u001b[0m | \u001b[0m 4.29    \u001b[0m | \u001b[0m 2.84    \u001b[0m | \u001b[0m 1.613   \u001b[0m | \u001b[0m 0.5903  \u001b[0m |\n",
+      "| \u001b[95m 7       \u001b[0m | \u001b[95m 0.8556  \u001b[0m | \u001b[95m 0.4852  \u001b[0m | \u001b[95m 9.968   \u001b[0m | \u001b[95m 1.423   \u001b[0m | \u001b[95m 1.748   \u001b[0m | \u001b[95m 0.3132  \u001b[0m |\n",
+      "| \u001b[0m 8       \u001b[0m | \u001b[0m 0.8456  \u001b[0m | \u001b[0m 0.7323  \u001b[0m | \u001b[0m 8.509   \u001b[0m | \u001b[0m 1.889   \u001b[0m | \u001b[0m 2.837   \u001b[0m | \u001b[0m 0.7773  \u001b[0m |\n",
+      "| \u001b[0m 9       \u001b[0m | \u001b[0m 0.8415  \u001b[0m | \u001b[0m 0.5517  \u001b[0m | \u001b[0m 6.933   \u001b[0m | \u001b[0m 2.123   \u001b[0m | \u001b[0m 0.2747  \u001b[0m | \u001b[0m 0.7667  \u001b[0m |\n",
+      "| \u001b[95m 10      \u001b[0m | \u001b[95m 0.8616  \u001b[0m | \u001b[95m 0.7694  \u001b[0m | \u001b[95m 4.893   \u001b[0m | \u001b[95m 0.4739  \u001b[0m | \u001b[95m 1.015   \u001b[0m | \u001b[95m 0.5546  \u001b[0m |\n",
+      "| \u001b[0m 11      \u001b[0m | \u001b[0m 0.8456  \u001b[0m | \u001b[0m 0.7581  \u001b[0m | \u001b[0m 12.0    \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 0.3     \u001b[0m |\n",
+      "| \u001b[0m 12      \u001b[0m | \u001b[0m 0.8435  \u001b[0m | \u001b[0m 0.4244  \u001b[0m | \u001b[0m 12.0    \u001b[0m | \u001b[0m 0.101   \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 1.0     \u001b[0m |\n",
+      "| \u001b[0m 13      \u001b[0m | \u001b[0m 0.8595  \u001b[0m | \u001b[0m 0.3     \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.3     \u001b[0m |\n",
+      "| \u001b[95m 14      \u001b[0m | \u001b[95m 0.8656  \u001b[0m | \u001b[95m 1.0     \u001b[0m | \u001b[95m 3.0     \u001b[0m | \u001b[95m 0.1     \u001b[0m | \u001b[95m 2.852   \u001b[0m | \u001b[95m 0.3     \u001b[0m |\n",
+      "| \u001b[0m 15      \u001b[0m | \u001b[0m 0.8655  \u001b[0m | \u001b[0m 0.3     \u001b[0m | \u001b[0m 12.0    \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 2.704   \u001b[0m | \u001b[0m 0.3     \u001b[0m |\n",
+      "| \u001b[0m 16      \u001b[0m | \u001b[0m 0.8455  \u001b[0m | \u001b[0m 0.9921  \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 0.1608  \u001b[0m | \u001b[0m 0.6955  \u001b[0m | \u001b[0m 1.0     \u001b[0m |\n",
+      "| \u001b[0m 17      \u001b[0m | \u001b[0m 0.8556  \u001b[0m | \u001b[0m 0.9251  \u001b[0m | \u001b[0m 7.953   \u001b[0m | \u001b[0m 0.1189  \u001b[0m | \u001b[0m 0.138   \u001b[0m | \u001b[0m 0.3125  \u001b[0m |\n",
+      "| \u001b[0m 18      \u001b[0m | \u001b[0m 0.8575  \u001b[0m | \u001b[0m 0.3132  \u001b[0m | \u001b[0m 4.373   \u001b[0m | \u001b[0m 0.1864  \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 0.3     \u001b[0m |\n",
+      "| \u001b[0m 19      \u001b[0m | \u001b[0m 0.8635  \u001b[0m | \u001b[0m 1.0     \u001b[0m | \u001b[0m 12.0    \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 2.451   \u001b[0m | \u001b[0m 0.3     \u001b[0m |\n",
+      "| \u001b[0m 20      \u001b[0m | \u001b[0m 0.8415  \u001b[0m | \u001b[0m 0.9397  \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 0.3     \u001b[0m |\n",
+      "| \u001b[0m 21      \u001b[0m | \u001b[0m 0.8595  \u001b[0m | \u001b[0m 0.3     \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 1.762   \u001b[0m | \u001b[0m 0.3     \u001b[0m |\n",
+      "| \u001b[0m 22      \u001b[0m | \u001b[0m 0.8655  \u001b[0m | \u001b[0m 0.3     \u001b[0m | \u001b[0m 12.0    \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.3     \u001b[0m |\n",
+      "| \u001b[0m 23      \u001b[0m | \u001b[0m 0.8433  \u001b[0m | \u001b[0m 0.3     \u001b[0m | \u001b[0m 12.0    \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 0.4042  \u001b[0m | \u001b[0m 0.3     \u001b[0m |\n",
+      "| \u001b[0m 24      \u001b[0m | \u001b[0m 0.8595  \u001b[0m | \u001b[0m 0.3     \u001b[0m | \u001b[0m 5.23    \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.3     \u001b[0m |\n",
+      "| \u001b[0m 25      \u001b[0m | \u001b[0m 0.8576  \u001b[0m | \u001b[0m 0.9598  \u001b[0m | \u001b[0m 4.637   \u001b[0m | \u001b[0m 0.5344  \u001b[0m | \u001b[0m 0.1181  \u001b[0m | \u001b[0m 0.324   \u001b[0m |\n",
+      "| \u001b[0m 26      \u001b[0m | \u001b[0m 0.8395  \u001b[0m | \u001b[0m 0.9892  \u001b[0m | \u001b[0m 4.706   \u001b[0m | \u001b[0m 1.954   \u001b[0m | \u001b[0m 2.937   \u001b[0m | \u001b[0m 0.9703  \u001b[0m |\n",
+      "| \u001b[95m 27      \u001b[0m | \u001b[95m 0.8656  \u001b[0m | \u001b[95m 0.8818  \u001b[0m | \u001b[95m 9.755   \u001b[0m | \u001b[95m 0.1218  \u001b[0m | \u001b[95m 2.869   \u001b[0m | \u001b[95m 0.313   \u001b[0m |\n",
+      "| \u001b[0m 28      \u001b[0m | \u001b[0m 0.8393  \u001b[0m | \u001b[0m 0.3     \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.3754  \u001b[0m |\n",
+      "| \u001b[0m 29      \u001b[0m | \u001b[0m 0.8655  \u001b[0m | \u001b[0m 0.3     \u001b[0m | \u001b[0m 10.88   \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 1.674   \u001b[0m | \u001b[0m 0.3     \u001b[0m |\n",
+      "| \u001b[0m 30      \u001b[0m | \u001b[0m 0.8433  \u001b[0m | \u001b[0m 0.3     \u001b[0m | \u001b[0m 9.717   \u001b[0m | \u001b[0m 2.891   \u001b[0m | \u001b[0m 2.913   \u001b[0m | \u001b[0m 0.3     \u001b[0m |\n",
       "=====================================================================================\n",
-      "Wall time: 10min 11s\n"
+      "Wall time: 12min\n"
      ]
     }
    ],
@@ -314,20 +344,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'colsample_bytree': 0.9999999995241093,\n",
-       " 'max_depth': 3.0000000006691714,\n",
-       " 'reg_alpha': 0.1,\n",
-       " 'reg_lamda': 3.0,\n",
-       " 'subsample': 0.3}"
+       "<bayes_opt.bayesian_optimization.BayesianOptimization at 0x1c4eadad088>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,44 +364,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "best_params = {\n",
-    "    'n_estimators': int(best_ns[12]),\n",
-    "    'booster': 'gbtree',\n",
-    "    'tree_method': 'hist',\n",
-    "    'random_state': 0,\n",
-    "    'n_jobs': -1,\n",
-    "    'max_depth': int(optimizer.max['params']['max_depth']),\n",
-    "    'subsample': optimizer.max['params']['subsample'],\n",
-    "    'colsample_bytree': optimizer.max['params']['colsample_bytree'],\n",
-    "    'reg_alpha': optimizer.max['params']['reg_alpha'],\n",
-    "    'reg_lamda': optimizer.max['params']['reg_lamda']\n",
-    "}\n",
-    "\n",
-    "clf = XGBClassifier(**best_params).fit(train_X, train_y)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "33.9\n"
-     ]
-    }
-   ],
-   "source": [
-    "final_params = {\n",
-    "    'n_estimators': int(best_n),\n",
+    "    'n_estimators': int(best_ns[26]),\n",
     "    'booster': 'gbtree',\n",
     "    'tree_method': 'hist',\n",
     "    'random_state': 0,\n",
@@ -386,12 +382,14 @@
     "    'reg_alpha': optimizer.max['params']['reg_alpha'],\n",
     "    'reg_lamda': optimizer.max['params']['reg_lamda'],\n",
     "    'metric': 'error'\n",
-    "}"
+    "}\n",
+    "\n",
+    "clf = XGBClassifier(**best_params).fit(train_X, train_y)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
