--- a/3.regression/3-3.활용.ipynb
+++ b/3.regression/3-3.활용.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 기존 모델 활용\n",
+    "\n",
+    "- 기존 분류모델에 사용한 분류기들을 regression용으로 사용할 수 있음\n",
+    "- 해당 집합의 평균값으로 예측함\n",
+    "- 모형을 생성하는 과정은 기존과 동일"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
