--- a/2.classification/2-9.NN.ipynb
+++ b/2.classification/2-9.NN.ipynb
@@ -204,53 +204,53 @@
      "text": [
       "Train on 348 samples, validate on 150 samples\n",
       "Epoch 1/100\n",
-      "348/348 [==============================] - 1s 3ms/step - loss: 0.5422 - acc: 0.7471 - val_loss: 0.4445 - val_acc: 0.8000\n",
+      "348/348 [==============================] - 0s 1ms/step - loss: 0.5331 - acc: 0.7586 - val_loss: 0.4402 - val_acc: 0.8200\n",
       "Epoch 2/100\n",
-      "348/348 [==============================] - 0s 192us/step - loss: 0.4413 - acc: 0.8075 - val_loss: 0.4385 - val_acc: 0.8200\n",
+      "348/348 [==============================] - 0s 97us/step - loss: 0.4417 - acc: 0.8103 - val_loss: 0.4445 - val_acc: 0.8133\n",
       "Epoch 3/100\n",
-      "348/348 [==============================] - 0s 206us/step - loss: 0.4158 - acc: 0.8276 - val_loss: 0.4422 - val_acc: 0.8000\n",
+      "348/348 [==============================] - 0s 97us/step - loss: 0.4240 - acc: 0.8190 - val_loss: 0.4505 - val_acc: 0.8133\n",
       "Epoch 4/100\n",
-      "348/348 [==============================] - 0s 195us/step - loss: 0.3967 - acc: 0.8362 - val_loss: 0.4173 - val_acc: 0.8067\n",
+      "348/348 [==============================] - 0s 97us/step - loss: 0.4067 - acc: 0.8391 - val_loss: 0.4309 - val_acc: 0.8133\n",
       "Epoch 5/100\n",
-      "348/348 [==============================] - 0s 198us/step - loss: 0.3912 - acc: 0.8420 - val_loss: 0.4347 - val_acc: 0.7933\n",
+      "348/348 [==============================] - 0s 100us/step - loss: 0.3914 - acc: 0.8506 - val_loss: 0.4380 - val_acc: 0.8067\n",
       "Epoch 6/100\n",
-      "348/348 [==============================] - 0s 212us/step - loss: 0.3896 - acc: 0.8477 - val_loss: 0.4261 - val_acc: 0.8133\n",
+      "348/348 [==============================] - 0s 97us/step - loss: 0.3877 - acc: 0.8391 - val_loss: 0.4396 - val_acc: 0.8000\n",
       "Epoch 7/100\n",
-      "348/348 [==============================] - 0s 192us/step - loss: 0.3829 - acc: 0.8534 - val_loss: 0.4327 - val_acc: 0.8000\n",
+      "348/348 [==============================] - 0s 106us/step - loss: 0.3813 - acc: 0.8563 - val_loss: 0.4352 - val_acc: 0.8067\n",
       "Epoch 8/100\n",
-      "348/348 [==============================] - 0s 229us/step - loss: 0.3748 - acc: 0.8534 - val_loss: 0.4257 - val_acc: 0.8067\n",
+      "348/348 [==============================] - 0s 97us/step - loss: 0.3693 - acc: 0.8563 - val_loss: 0.4400 - val_acc: 0.7867\n",
       "Epoch 9/100\n",
-      "348/348 [==============================] - 0s 192us/step - loss: 0.3638 - acc: 0.8649 - val_loss: 0.4385 - val_acc: 0.8000\n",
+      "348/348 [==============================] - 0s 100us/step - loss: 0.3583 - acc: 0.8592 - val_loss: 0.4454 - val_acc: 0.7800\n",
       "Epoch 10/100\n",
-      "348/348 [==============================] - 0s 126us/step - loss: 0.3574 - acc: 0.8534 - val_loss: 0.4313 - val_acc: 0.8133\n",
+      "348/348 [==============================] - 0s 100us/step - loss: 0.3473 - acc: 0.8621 - val_loss: 0.4474 - val_acc: 0.7800\n",
       "Epoch 11/100\n",
-      "348/348 [==============================] - 0s 192us/step - loss: 0.3491 - acc: 0.8563 - val_loss: 0.4496 - val_acc: 0.7933\n",
+      "348/348 [==============================] - 0s 100us/step - loss: 0.3434 - acc: 0.8707 - val_loss: 0.4674 - val_acc: 0.7733\n",
       "Epoch 12/100\n",
-      "348/348 [==============================] - 0s 206us/step - loss: 0.3617 - acc: 0.8563 - val_loss: 0.4376 - val_acc: 0.8133\n",
+      "348/348 [==============================] - 0s 95us/step - loss: 0.3419 - acc: 0.8592 - val_loss: 0.4612 - val_acc: 0.7733\n",
       "Epoch 13/100\n",
-      "348/348 [==============================] - 0s 209us/step - loss: 0.3395 - acc: 0.8621 - val_loss: 0.4755 - val_acc: 0.7867\n",
+      "348/348 [==============================] - 0s 97us/step - loss: 0.3277 - acc: 0.8621 - val_loss: 0.4623 - val_acc: 0.7733\n",
       "Epoch 14/100\n",
-      "348/348 [==============================] - 0s 192us/step - loss: 0.3378 - acc: 0.8736 - val_loss: 0.4479 - val_acc: 0.8133\n",
+      "348/348 [==============================] - 0s 95us/step - loss: 0.3207 - acc: 0.8534 - val_loss: 0.4642 - val_acc: 0.7533\n",
       "Epoch 15/100\n",
-      "348/348 [==============================] - 0s 189us/step - loss: 0.3302 - acc: 0.8678 - val_loss: 0.4408 - val_acc: 0.8200\n",
+      "348/348 [==============================] - 0s 100us/step - loss: 0.3218 - acc: 0.8678 - val_loss: 0.4664 - val_acc: 0.7733\n",
       "Epoch 16/100\n",
-      "348/348 [==============================] - 0s 201us/step - loss: 0.3142 - acc: 0.8649 - val_loss: 0.4646 - val_acc: 0.7800\n",
+      "348/348 [==============================] - 0s 97us/step - loss: 0.3089 - acc: 0.8678 - val_loss: 0.4947 - val_acc: 0.7600\n",
       "Epoch 17/100\n",
-      "348/348 [==============================] - 0s 209us/step - loss: 0.3136 - acc: 0.8707 - val_loss: 0.4858 - val_acc: 0.7667\n",
+      "348/348 [==============================] - 0s 103us/step - loss: 0.3051 - acc: 0.8678 - val_loss: 0.4513 - val_acc: 0.7800\n",
       "Epoch 18/100\n",
-      "348/348 [==============================] - 0s 218us/step - loss: 0.3057 - acc: 0.8707 - val_loss: 0.4639 - val_acc: 0.8000\n",
+      "348/348 [==============================] - 0s 97us/step - loss: 0.3126 - acc: 0.8621 - val_loss: 0.4792 - val_acc: 0.7600\n",
       "Epoch 19/100\n",
-      "348/348 [==============================] - 0s 198us/step - loss: 0.3130 - acc: 0.8707 - val_loss: 0.4815 - val_acc: 0.8000\n",
+      "348/348 [==============================] - 0s 95us/step - loss: 0.3101 - acc: 0.8736 - val_loss: 0.5049 - val_acc: 0.7733\n",
       "Epoch 20/100\n",
-      "348/348 [==============================] - 0s 195us/step - loss: 0.3092 - acc: 0.8793 - val_loss: 0.4885 - val_acc: 0.7933\n",
+      "348/348 [==============================] - 0s 100us/step - loss: 0.3007 - acc: 0.8764 - val_loss: 0.5051 - val_acc: 0.7600\n",
       "Epoch 21/100\n",
-      "348/348 [==============================] - 0s 201us/step - loss: 0.2936 - acc: 0.8764 - val_loss: 0.4905 - val_acc: 0.7867\n",
+      "348/348 [==============================] - 0s 99us/step - loss: 0.3068 - acc: 0.8621 - val_loss: 0.5202 - val_acc: 0.7867\n",
       "Epoch 22/100\n",
-      "348/348 [==============================] - 0s 198us/step - loss: 0.2984 - acc: 0.8736 - val_loss: 0.4841 - val_acc: 0.7800\n",
+      "348/348 [==============================] - 0s 98us/step - loss: 0.3101 - acc: 0.8707 - val_loss: 0.4839 - val_acc: 0.7867\n",
       "Epoch 23/100\n",
-      "348/348 [==============================] - 0s 183us/step - loss: 0.2869 - acc: 0.8793 - val_loss: 0.4989 - val_acc: 0.8067\n",
+      "348/348 [==============================] - 0s 97us/step - loss: 0.2928 - acc: 0.8736 - val_loss: 0.5192 - val_acc: 0.7733\n",
       "Epoch 24/100\n",
-      "348/348 [==============================] - 0s 205us/step - loss: 0.2924 - acc: 0.8793 - val_loss: 0.4999 - val_acc: 0.7933\n",
+      "348/348 [==============================] - 0s 100us/step - loss: 0.2746 - acc: 0.8793 - val_loss: 0.5069 - val_acc: 0.7667\n",
       "Restoring model weights from the end of the best epoch\n",
       "Epoch 00024: early stopping\n"
      ]
@@ -258,7 +258,7 @@
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.callbacks.History at 0x166e44fa4c8>"
+       "<keras.callbacks.callbacks.History at 0x1d3a5133688>"
       ]
      },
      "execution_count": 8,
@@ -283,7 +283,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8037383177570093\n"
+      "0.7850467289719626\n"
      ]
     }
    ],
@@ -308,13 +308,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "214/214 [==============================] - 0s 93us/step\n"
+      "214/214 [==============================] - 0s 47us/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.45257473743964577, 0.8037382960319519]"
+       "[0.47775495052337646, 0.7850467562675476]"
       ]
      },
      "execution_count": 10,
@@ -339,63 +339,57 @@
      "text": [
       "Train on 348 samples, validate on 150 samples\n",
       "Epoch 1/40\n",
-      "348/348 [==============================] - 0s 467us/step - loss: 0.6075 - acc: 0.7414 - val_loss: 0.4831 - val_acc: 0.8000\n",
+      "348/348 [==============================] - 0s 418us/step - loss: 0.6222 - acc: 0.7414 - val_loss: 0.5385 - val_acc: 0.8133\n",
       "Epoch 2/40\n",
-      "348/348 [==============================] - 0s 175us/step - loss: 0.4577 - acc: 0.8075 - val_loss: 0.5245 - val_acc: 0.7533\n",
+      "348/348 [==============================] - 0s 103us/step - loss: 0.4812 - acc: 0.8103 - val_loss: 0.4748 - val_acc: 0.7933\n",
       "Epoch 3/40\n",
-      "348/348 [==============================] - 0s 192us/step - loss: 0.4313 - acc: 0.8420 - val_loss: 0.4422 - val_acc: 0.8067\n",
+      "348/348 [==============================] - 0s 106us/step - loss: 0.4620 - acc: 0.8103 - val_loss: 0.4918 - val_acc: 0.7733\n",
       "Epoch 4/40\n",
-      "348/348 [==============================] - 0s 192us/step - loss: 0.4383 - acc: 0.8276 - val_loss: 0.4490 - val_acc: 0.8067\n",
+      "348/348 [==============================] - 0s 106us/step - loss: 0.4373 - acc: 0.8132 - val_loss: 0.5039 - val_acc: 0.7933\n",
       "Epoch 5/40\n",
-      "348/348 [==============================] - 0s 186us/step - loss: 0.4115 - acc: 0.8218 - val_loss: 0.4309 - val_acc: 0.8067\n",
+      "348/348 [==============================] - 0s 109us/step - loss: 0.4298 - acc: 0.8276 - val_loss: 0.5361 - val_acc: 0.7133\n",
       "Epoch 6/40\n",
-      "348/348 [==============================] - 0s 215us/step - loss: 0.3990 - acc: 0.8276 - val_loss: 0.4419 - val_acc: 0.8067\n",
+      "348/348 [==============================] - 0s 112us/step - loss: 0.4295 - acc: 0.8218 - val_loss: 0.5303 - val_acc: 0.7467\n",
       "Epoch 7/40\n",
-      "348/348 [==============================] - 0s 201us/step - loss: 0.3717 - acc: 0.8247 - val_loss: 0.5249 - val_acc: 0.7600\n",
+      "348/348 [==============================] - 0s 103us/step - loss: 0.3911 - acc: 0.8420 - val_loss: 0.5220 - val_acc: 0.7933\n",
       "Epoch 8/40\n",
-      "348/348 [==============================] - 0s 189us/step - loss: 0.3823 - acc: 0.8448 - val_loss: 0.5175 - val_acc: 0.7733\n",
+      "348/348 [==============================] - 0s 112us/step - loss: 0.3920 - acc: 0.8190 - val_loss: 0.4843 - val_acc: 0.8200\n",
       "Epoch 9/40\n",
-      "348/348 [==============================] - 0s 218us/step - loss: 0.3889 - acc: 0.8333 - val_loss: 0.4673 - val_acc: 0.8133\n",
+      "348/348 [==============================] - 0s 109us/step - loss: 0.3977 - acc: 0.8247 - val_loss: 0.5621 - val_acc: 0.8333\n",
       "Epoch 10/40\n",
-      "348/348 [==============================] - 0s 195us/step - loss: 0.3632 - acc: 0.8448 - val_loss: 0.5192 - val_acc: 0.7800\n",
+      "348/348 [==============================] - 0s 106us/step - loss: 0.3641 - acc: 0.8448 - val_loss: 0.4847 - val_acc: 0.8200\n",
       "Epoch 11/40\n",
-      "348/348 [==============================] - 0s 189us/step - loss: 0.3565 - acc: 0.8391 - val_loss: 0.5387 - val_acc: 0.7800\n",
+      "348/348 [==============================] - 0s 109us/step - loss: 0.3554 - acc: 0.8448 - val_loss: 0.5769 - val_acc: 0.8133\n",
       "Epoch 12/40\n",
-      "348/348 [==============================] - 0s 146us/step - loss: 0.3430 - acc: 0.8362 - val_loss: 0.6075 - val_acc: 0.7267\n",
+      "348/348 [==============================] - 0s 103us/step - loss: 0.3786 - acc: 0.8448 - val_loss: 0.5362 - val_acc: 0.8133\n",
       "Epoch 13/40\n",
-      "348/348 [==============================] - 0s 181us/step - loss: 0.3434 - acc: 0.8506 - val_loss: 0.5597 - val_acc: 0.7467\n",
+      "348/348 [==============================] - 0s 106us/step - loss: 0.3540 - acc: 0.8534 - val_loss: 0.4976 - val_acc: 0.8133\n",
       "Epoch 14/40\n",
-      "348/348 [==============================] - 0s 181us/step - loss: 0.4078 - acc: 0.8017 - val_loss: 0.5098 - val_acc: 0.7800\n",
+      "348/348 [==============================] - 0s 106us/step - loss: 0.3302 - acc: 0.8649 - val_loss: 0.5484 - val_acc: 0.8267\n",
       "Epoch 15/40\n",
-      "348/348 [==============================] - 0s 195us/step - loss: 0.3824 - acc: 0.8276 - val_loss: 0.5126 - val_acc: 0.8333\n",
+      "348/348 [==============================] - 0s 103us/step - loss: 0.3299 - acc: 0.8506 - val_loss: 0.5129 - val_acc: 0.8067\n",
       "Epoch 16/40\n",
-      "348/348 [==============================] - 0s 212us/step - loss: 0.3620 - acc: 0.8247 - val_loss: 0.5398 - val_acc: 0.7933\n",
+      "348/348 [==============================] - 0s 106us/step - loss: 0.3199 - acc: 0.8621 - val_loss: 0.6131 - val_acc: 0.8133\n",
       "Epoch 17/40\n",
-      "348/348 [==============================] - 0s 201us/step - loss: 0.3275 - acc: 0.8420 - val_loss: 0.5496 - val_acc: 0.7667\n",
+      "348/348 [==============================] - 0s 103us/step - loss: 0.3146 - acc: 0.8678 - val_loss: 0.5669 - val_acc: 0.8067\n",
       "Epoch 18/40\n",
-      "348/348 [==============================] - 0s 235us/step - loss: 0.3345 - acc: 0.8563 - val_loss: 0.5632 - val_acc: 0.7867\n",
+      "348/348 [==============================] - 0s 106us/step - loss: 0.3500 - acc: 0.8420 - val_loss: 0.5518 - val_acc: 0.8333\n",
       "Epoch 19/40\n",
-      "348/348 [==============================] - 0s 169us/step - loss: 0.3396 - acc: 0.8621 - val_loss: 0.7069 - val_acc: 0.7267\n",
+      "348/348 [==============================] - 0s 103us/step - loss: 0.3396 - acc: 0.8190 - val_loss: 0.5766 - val_acc: 0.8067\n",
       "Epoch 20/40\n",
-      "348/348 [==============================] - 0s 172us/step - loss: 0.3373 - acc: 0.8362 - val_loss: 0.6077 - val_acc: 0.7467\n",
+      "348/348 [==============================] - 0s 106us/step - loss: 0.3561 - acc: 0.8477 - val_loss: 0.6859 - val_acc: 0.8200\n",
       "Epoch 21/40\n",
-      "348/348 [==============================] - 0s 192us/step - loss: 0.3458 - acc: 0.8362 - val_loss: 0.5665 - val_acc: 0.7267\n",
+      "348/348 [==============================] - 0s 103us/step - loss: 0.3552 - acc: 0.8477 - val_loss: 0.5283 - val_acc: 0.7867\n",
       "Epoch 22/40\n",
-      "348/348 [==============================] - 0s 198us/step - loss: 0.3354 - acc: 0.8448 - val_loss: 0.6169 - val_acc: 0.7867\n",
-      "Epoch 23/40\n",
-      "348/348 [==============================] - 0s 226us/step - loss: 0.3172 - acc: 0.8448 - val_loss: 0.6339 - val_acc: 0.7667\n",
-      "Epoch 24/40\n",
-      "348/348 [==============================] - 0s 224us/step - loss: 0.3310 - acc: 0.8563 - val_loss: 0.5845 - val_acc: 0.8133\n",
-      "Epoch 25/40\n",
-      "348/348 [==============================] - 0s 155us/step - loss: 0.3357 - acc: 0.8477 - val_loss: 0.7418 - val_acc: 0.7333\n",
+      "348/348 [==============================] - 0s 103us/step - loss: 0.3707 - acc: 0.8534 - val_loss: 0.6606 - val_acc: 0.8267\n",
       "Restoring model weights from the end of the best epoch\n",
-      "Epoch 00025: early stopping\n"
+      "Epoch 00022: early stopping\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.callbacks.History at 0x16816b22c88>"
+       "<keras.callbacks.callbacks.History at 0x1d515449488>"
       ]
      },
      "execution_count": 11,
@@ -421,6 +415,78 @@
     "         validation_split=0.3,\n",
     "         callbacks=[cp, es])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 보충자료\n",
+    "\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
+    "mlp = MLPClassifier(hidden_layer_sizes=[32, 16], \n",
+    "                   activation='relu',\n",
+    "                   alpha=0.01,\n",
+    "                   solver='adam',\n",
+    "                   early_stopping=True,\n",
+    "                   )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MLPClassifier(activation='relu', alpha=0.01, batch_size='auto', beta_1=0.9,\n",
+       "              beta_2=0.999, early_stopping=True, epsilon=1e-08,\n",
+       "              hidden_layer_sizes=[32, 16], learning_rate='constant',\n",
+       "              learning_rate_init=0.001, max_fun=15000, max_iter=200,\n",
+       "              momentum=0.9, n_iter_no_change=10, nesterovs_momentum=True,\n",
+       "              power_t=0.5, random_state=None, shuffle=True, solver='adam',\n",
+       "              tol=0.0001, validation_fraction=0.1, verbose=False,\n",
+       "              warm_start=False)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlp.fit(train_X, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7149532710280374"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(test_y, mlp.predict(test_X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
