--- a/2.classification/breast cancer-Copy1.ipynb
+++ b/2.classification/breast cancer-Copy1.ipynb
@@ -817,7 +817,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model"
+   ]
   },
   {
    "cell_type": "code",
