--- a/1.clustering/1-1.k-means.ipynb
+++ b/1.clustering/1-1.k-means.ipynb
@@ -322,7 +322,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x23bb95fec88>]"
+       "[<matplotlib.lines.Line2D at 0x22efa567f88>]"
       ]
      },
      "execution_count": 11,
@@ -356,7 +356,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x23bb969d208>]"
+       "[<matplotlib.lines.Line2D at 0x22efaa18c48>]"
       ]
      },
      "execution_count": 12,
