--- a/2.classification/titanic.ipynb
+++ b/2.classification/titanic.ipynb
@@ -947,7 +947,7 @@
     "    \n",
     "    input_layer = layers.Input(shape=((meta_train.shape[1], )))\n",
     "\n",
-    "    layer1 = layers.Dense(16, activation='relu')(input_layer)\n",
+    "    layer1 = layers.Dense(4, activation='relu')(input_layer)\n",
     "#     layer2 = layers.Dense(8, activation='relu')(layer1)\n",
     "    \n",
     "    out_layer = layers.Dense(1, activation='sigmoid')(layer1)\n",
@@ -1093,13 +1093,7 @@
       "348/348 [==============================] - 0s 101us/step - loss: 0.1048 - acc: 0.9971 - val_loss: 0.1127 - val_acc: 0.9867\n",
       "Epoch 60/200\n",
       "348/348 [==============================] - 0s 105us/step - loss: 0.1025 - acc: 0.9971 - val_loss: 0.1106 - val_acc: 0.9867\n",
-      "Epoch 61/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 61/200\n",
       "348/348 [==============================] - 0s 108us/step - loss: 0.0995 - acc: 0.9971 - val_loss: 0.1077 - val_acc: 0.9867\n",
       "Epoch 62/200\n",
       "348/348 [==============================] - 0s 98us/step - loss: 0.0971 - acc: 0.9971 - val_loss: 0.1054 - val_acc: 0.9867\n",
