--- a/2.classification/0-1.Preprocessing.ipynb
+++ b/2.classification/0-1.Preprocessing.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,8 +215,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "## onehot using pandas\n",
