--- a/1.clustering/1-3.GMM.ipynb
+++ b/1.clustering/1-3.GMM.ipynb
@@ -9,7 +9,7 @@
     "- 확률분포를 활용한 군집화\n",
     "- 데이터가 여러개의 정규분포로 구성되어 있다고 가정\n",
     "- EM알고리즘을 활용\n",
-    "    - 기대값을 최대화 하는 알고리즘으로 likelyhood method와 유사"
+    "    - 기대값을 최대화 하는 알고리즘으로 likelihood method와 유사"
    ]
   },
   {
